--- a/package.json
+++ b/package.json
@@ -32,7 +32,10 @@
     "datatables.net-buttons-bs4": "^2.3.6",
     "datatables.net-buttons-dt": "^2.2.3",
     "datatables.net-dt": "^1.1.0",
+    "deps": "^1.0.0",
+    "html2canvas": "^1.4.1",
     "jquery": "^3.6.0",
+    "jspdf": "^2.5.1",
     "jszip": "^3.10.1",
     "ng-confirm-box": "^0.1.1",
     "ng-recaptcha": "^11.0.0",
